# jarvis

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  TODO.md  Trunk.toml  index.html  repomix-output-nico-martin-jarvis.xml
.cargo/: config.toml
.github/workflows/: ci.yml
jarvis-ai/: Cargo.toml
jarvis-ai/src/: agent.rs  audio.rs  inference.rs  lib.rs  models.rs  types.rs
jarvis-ai/src/models/: llm.rs  whisper.rs
jarvis-app/: Cargo.toml  Trunk.toml
jarvis-app/src/: lib.rs
jarvis-app/src/components/: button.rs  jarvis_ring.rs  message.rs  mod.rs
jarvis-app/src/pages/: chat.rs  home.rs  mcp.rs  mod.rs
jarvis-app/src/state/: mod.rs
jarvis-app/src/utils/: mod.rs  storage.rs
jarvis-mcp/: Cargo.toml
jarvis-mcp/src/: client.rs  lib.rs  server.rs  transport.rs  types.rs
