[workspace]
members = [
    "jarvis-app",
    "jarvis-ai",
    "jarvis-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bhargav Kataru", "Based on JARVIS by Nicolas Martin <mail@nico.dev>"]
license = "MIT"

[workspace.dependencies]
# Leptos for reactive UI
leptos = { version = "0.7" }
leptos_router = { version = "0.7" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Async
futures = "0.3"
tokio = { version = "1", default-features = false }

# Utilities
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
uuid = { version = "1.11", features = ["v4", "js"] }
thiserror = "2.0"
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# AI/ML - Commented out temporarily due to dependency conflicts
# Will be re-enabled once Candle WASM dependencies are resolved
# candle-core = { version = "0.8", default-features = false }
# candle-nn = { version = "0.8", default-features = false }
# candle-transformers = { version = "0.8", default-features = false }
# hf-hub = "0.3"

# Audio processing
rubato = "0.16"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
