[workspace]
members = [
    "jarvis-app",
    "jarvis-ai",
    "jarvis-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Baalateja Kataru", "Based on JARVIS by Nicolas Martin <mail@nico.dev>"]
license = "MIT"

[workspace.dependencies]
# Leptos for reactive UI
leptos = { version = "0.7" }
leptos_router = { version = "0.7" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Async
futures = "0.3"

# Utilities
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
uuid = { version = "1.11", features = ["v4", "js"] }
thiserror = "2.0"
anyhow = "1.0"

# getrandom for WASM - using 0.3 with wasm_js feature
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }

# AI/ML - Burn framework with WASM/WebGPU support
burn = { version = "0.19", default-features = false }

# Audio processing
rubato = "0.16"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
